--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -52,9 +52,9 @@
                       </div>
                       <div class="product-content-wrap">
                         <h2><a href="/shop-detail?id=<%= product.id %>"><%= product.name %></a></h2>
-                        <div class="rating-result" title="<%= product.rating %>">
+                        <!-- <div class="rating-result" title="<%= product.rating %>">
                           <span><span><%= product.rating %></span></span>
-                        </div>
+                        </div> -->
                         <div class="product-price">
                           <% 
                             let lowestPrice = product.price;
