--- a/views/users/shopdetail.ejs
+++ b/views/users/shopdetail.ejs
@@ -55,13 +55,13 @@
                       <div class="pro-details-brand">
                         <!-- <span> Brands: <a href="shop-grid-right.html">Bootstrap</a></span> -->
                       </div>
-                      <div class="product-rate-cover text-end">
+                      <!-- <div class="product-rate-cover text-end">
                         <div class="product-rate d-inline-block">
                           <div class="product-rating" style="width:<%= product.rating %>%">
                           </div>
                         </div>
                         <span class="font-small ml-5 text-muted"> (<%= product.reviews %> reviews)</span>
-                      </div>
+                      </div> -->
                     </div>
                     <div class="clearfix product-price-cover">
                       <div class="product-price primary-color float-left">
